--- a/packages/hzl-web/src/ui/index.html
+++ b/packages/hzl-web/src/ui/index.html
@@ -3,6 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="theme-color" content="#1a1a1a">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96">
+  <link rel="shortcut icon" href="/favicon.ico">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <meta name="apple-mobile-web-app-title" content="HZL">
+  <link rel="manifest" href="/site.webmanifest">
   <title>HZL</title>
   <style>
     :root {
@@ -4427,9 +4434,22 @@
     board.addEventListener('click', handleCardContainerClick);
     document.getElementById('mobileCardsContainer').addEventListener('click', handleCardContainerClick);
 
+    function registerServiceWorker() {
+      if (!('serviceWorker' in navigator)) {
+        return;
+      }
+
+      window.addEventListener('load', () => {
+        navigator.serviceWorker.register('/sw.js', { scope: '/' }).catch(() => {
+          // PWA support is optional; ignore registration failures.
+        });
+      });
+    }
+
     // Initialize
     loadPreferences();
     bindColumnScrollIndicators();
+    registerServiceWorker();
     connectEventStream();
     requestPoll();
 
